<resources>
    <string name="app_name">Book Exchange</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author_name">Author Name</string>
    <string name="description_of_book_very_interesting_stuff">Description of book very interesting stuff</string>
    <string name="todo">Book Cover Image</string>
    <string name="don_t_know_what_you_re_looking_for_try_a_new_york_times_best_seller">Don\'t know what you\'re looking for? Try a current New York Times Best Seller!</string>
    <string name="_1">#1</string>
    <string name="search_by_isbn">Search by ISBN</string>
    <string name="search">Search</string>
    <string name="the_book_title">The Book Title</string>
    <string name="selling">SELLING</string>
</resources>